# Lucid-AI-AF

./: .gitignore  README.md  TODO.md  docker-compose.yml  fix-button.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vercel.json
_legacy_routes/: __root.tsx  auth.login.tsx  notifications.index.tsx  profile.tsx  storage.upload.tsx
app/: globals.css
app/admin/: page.tsx
app/quests/: page.tsx
app/settings/: page.tsx
apps/ai-service/: .env.example  Dockerfile  docker-compose.yml  pyproject.toml  readme.md
apps/ai-service/app/ai/: ai_orchestrator.py  cache.py  embedding_service.py  validation.py
apps/ai-service/app/ai/prompts/: memory.py  npc.py  quest.py  system.py
apps/ai-service/app/ai/providers/: anthropic_provider.py  base_provider.py  gemini_provider.py  openai_provider.py
apps/ai-service/app/ai/services/: emotion_service.py  image_service.py  memory_service.py  npc_service.py  quest_service.py  story_service.py
apps/ai-service/app/ai/utils/: prompt_builder.py  provider_factory.py  response_parser.py  retry_helper.py  token_counter.py
apps/ai-service/app/config/: constants.py  logging.py  settings.py
apps/ai-service/app/core/: __init__.py  exceptions.py  security.py
apps/ai-service/app/database/: base.py  database.py  dependency.py  session.py  unit_of_work.py
apps/ai-service/app/workers/: tasks.py
apps/api/: .env  .env.example  package.json
apps/web/: package.json
components/: app-shell.tsx
lib/: auth.ts  mockPlayer.ts
lucid-ai-af/: middleware.ts
types/: player.ts
(+85 files in other folders)
