[tool.poetry]
name = "lucid-ai-backend"
version = "0.1.0"
description = "Production-ready enterprise backend framework for LUCID AI"
authors = ["Lucid AI Engineering Team <engineering@lucid.ai>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
pydantic = "^2.8.0"
pydantic-settings = "^2.3.0"
sqlalchemy = { extras = ["asyncio"], version = "^2.0.30" }
asyncpg = "^0.30.0"
alembic = "^1.13.0"
redis = "^5.0.0"
celery = { extras = ["redis"], version = "^5.4.0" }
qdrant-client = "^1.9.0"
openai = "^1.35.0"
anthropic = "^0.29.0"
google-generativeai = "^0.7.0"
pika = "^1.3.0"
prometheus-client = "^0.20.0"
opentelemetry-api = "^1.25.0"
opentelemetry-sdk = "^1.25.0"
opentelemetry-instrumentation-fastapi = "^0.46b0"
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
python-multipart = "^0.0.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.0"
black = "^24.4.0"
isort = "^5.13.0"
mypy = "^1.10.0"
ruff = "^0.4.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3